--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -1,4 +1,7 @@
 #NavBar {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 48px;
   background-color: #651FFF;
@@ -16,7 +19,7 @@
     line-height: normal;
   }
 
-  .setting{
-    
+  .setting {
+    color: white;
   }
 }
