--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
+  box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.20);
 
   .logo {
     color: #FFF;
@@ -20,6 +21,16 @@
   }
 
   .setting {
-    color: white;
+    padding: 7px;
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    @extend .center;
   }
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
