--- a/src/styles/DashBoard.scss
+++ b/src/styles/DashBoard.scss
@@ -6,16 +6,27 @@
   display: flex;
 
   .taiwan-logo {
-    position: fixed;
+    position: sticky;
     top: 56px;
     left: 0;
+    width: 10%;
+    display: flex;
+    // justify-content: center;
     height: calc(100vh - 56px - 10px);
+    img{
+      width: auto;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   .content {
     background-color: green;
-    width: 100%;
-    // padding: 0 10vw;
+    width: 90%;
+    // padding: 0 8%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   @media screen and (max-width: 576px) {
