added input change to form

--- a/src/styles/MainForm.scss
+++ b/src/styles/MainForm.scss
@@ -1,5 +1,5 @@
-#FormInput {
-  background-color: black;
+#MainForm {
+  // background-color: black;
 
   // RWD mobile media
   @media screen and (max-width: 576px) {
