added style to MainForm

--- a/src/styles/MainForm.scss
+++ b/src/styles/MainForm.scss
@@ -1,5 +1,7 @@
 #MainForm {
-  // background-color: black;
+  display: flex;
+  gap: 10px;
+
 
   // RWD mobile media
   @media screen and (max-width: 576px) {
